0.20.44	UNRELEASED

 * Fix reading of chunks in server. (Jelmer Vernooĳ, #977)

0.20.43	2022-06-07

 * Lazily import url2pathname.
   (Jelmer Vernooĳ)

 * Drop caching of full HTTP response. Attempt #2.
   (jelmer Vernooĳ, Antoine Lambert, #966)

0.20.42	2022-05-24

 * Drop ``RefsContainer.watch`` that was always flaky.
   (Jelmer Vernooĳ, #886)

0.20.41	2022-05-24

 * Fix wheel uploading, properly. (Ruslan Kuprieiev)

0.20.40	2022-05-19

 * Fix wheel uploading. (Daniele Trifirò, Jelmer Vernooĳ)

0.20.39	2022-05-19

0.20.38	2022-05-17

 * Disable paramiko tests if paramiko is not available. (Michał Górny)

 * Set flag to re-enable paramiko server side on gentoo for running paramiko
   tests. (Michał Górny)

 * Increase tolerance when comparing time stamps; fixes some
   spurious test failures on slow CI systems. (Jelmer Vernooĳ)

 * Revert removal of caching of full HTTP response. This breaks
   access to some HTTP servers.
   (Jelmer Vernooĳ)

0.20.37	2022-05-16

 * Avoid making an extra copy when fetching pack files.
   (Jelmer Vernooĳ)

 * Add ``porcelain.remote_remove``.
   (Jelmer Vernooĳ, #923)

0.20.36	2022-05-15

 * Add ``walk_untracked`` argument to ``porcelain.status``.
   (Daniele Trifirò)

 * Add tests for paramiko SSH Vendor.
   (Filipp Frizzy)

0.20.35	2022-03-20

 * Document the ``path`` attribute for ``Repo``.
   (Jelmer Vernooĳ, #854)

0.20.34	2022-03-14

 * Add support for multivars in configuration.
   (Jelmer Vernooĳ, #718)

0.20.33	2022-03-05

 * Fix handling of escaped characters in ignore patterns.
   (Jelmer Vernooĳ, #930)

 * Add ``dulwich.contrib.requests_vendor``. (epopcon)

 * Ensure git config is available in a linked working tree.
   (Jesse Cureton, #926)

0.20.32	2022-01-24

 * Properly close result repository during test.
   (Jelmer Vernooĳ, #928)

0.20.31	2022-01-21

 * Add GitClient.clone(). (Jelmer Vernooĳ, #920)

0.20.30	2022-01-08

0.20.29	2022-01-08

 * Support staging submodules.
   (Jelmer Vernooĳ)
